many changes made

--- a/about2.html
+++ b/about2.html
@@ -11,48 +11,89 @@
     <link rel="shortcut icon" type="image/png" style="border-radius: 50%;" href="images/t.jpg">
 </head>
 
-<body style="background-color: #b3ffff;">
-
-    <div>
-        <section class="abt" style="background-color:#99ccff;">
-            <h2 style="text-align: center; ">Traveller-About Page</h2>
+<body style="background-color: #bfbfbf;">
 
 
-        </section>
-        <div id="back">
-            <a href="index.html"><i class="fa fa-backward" aria-hidden="true"></i>Back</a>
-        </div>
-        <div class="abt_img">
-
-            <img src="images/about.jpg" alt="">
-
-            <div class="us">
-                <h4>ABOUT US</h4>
-                <h2>We Provide Best Tour Packages In Your Budget</h2>
-                <p>The best services ever are available to you from <i>Traveller.</i><br> We make sure you receive top-notch services. Fun for you and your loved ones is what we deliver. <br> Make you forget all your issues and feel incredibly calm</p>
-                <div id="a-img">
-
-                    <img src="images/about-1.jpg" alt="">
+    <section class="abt" style="background-color:#99ccff;">
+        <h2 style="text-align: center; ">Traveller-About Page</h2>
 
 
-                    <img src="images/a2.jpg" alt="">
+    </section>
+    <div id="back">
+        <a href="index.html"><i class="fa fa-backward" aria-hidden="true"></i>Back</a>
+    </div>
+    <div class="abt_img">
+
+        <img src="images/about.jpg" alt="">
+
+        <div class="us">
+            <h4>ABOUT US</h4>
+            <h2>We Provide Best Tour Packages In Your Budget</h2>
+            <p>The best services ever are available to you from <i>Traveller.</i><br> We make sure you receive top-notch services. Fun for you and your loved ones is what we deliver. <br> Make you forget all your issues and feel incredibly calm</p>
+            <div id="a-img">
+
+                <img src="images/about-1.jpg" alt="">
 
 
-                    <div class="book-now">
-                        <a href="#">Book Now</a>
-                    </div>
+                <img src="images/a2.jpg" alt="">
 
+
+                <div class="book-now">
+                    <a href="#">Book Now</a>
                 </div>
+
+            </div>
+
+        </div>
+
+
+    </div>
+    <!----------------------------Our travel guides------------------------------------------->
+    <section class="travel-guides">
+        <h3>Our Travel Guides</h3>
+        <div class="guides">
+            <div id="guide-1">
+                <img src="images/guide1.jpg" alt="">
+                <h4>Carter Waylon</h4>
+                <h5>Contact:<span>(555) 254- 1354</span></h5>
+                <h6>Destination</h6>
+
+            </div>
+            <div id="guide-1">
+                <img src="images/guide2.jpg" alt="">
+                <h4>Mia Aiden</h4>
+                <h5>Contact:<span>(555) 254-1204</span></h5>
+                <h6>Destination</h6>
+
+
+            </div>
+            <div id="guide-1">
+                <img src="images/guide3.jpg" alt="">
+                <h4>Lucas Ethan</h4>
+                <h5>Contact:<span>(555) 541-1704</span></h5>
+                <h6>Destination</h6>
+
+
+            </div>
+            <div id="guide-1">
+                <img src="images/guide4.jpg" alt="">
+                <h4>Amelia Liam</h4>
+                <h5>Contact:<span>(555) 643-1324</span></h5>
+                <h6>Destination</h6>
+
 
             </div>
 
 
         </div>
 
-    </div>
+
+    </section>
 
 
-    </div>
+
+
+
     <!----------------------footer------------------------------------->
     <section class="footer">
         <div id="container">
