--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 </head>
 
 <body style="background-color: #bfbfbf;">
-    <section>
 
+    <header>
         <div class="topbar">
 
             <div class="website-name">
@@ -40,8 +40,10 @@
 
 
         </div>
+    </header>
 
-        <!--------------------------------slide show------------------------------------------------->
+    <!--------------------------------slide show------------------------------------------------->
+    <section class="slidder">
         <div class="w3-content w3-display-container">
 
             <div class="w3-display-container mySlides">
@@ -83,162 +85,163 @@
             <button class="w3-button w3-display-right w3-black" onclick="plusDivs(1)">&#10095;</button>
 
         </div>
-
-
-
-        <!--------------------ARTICLES-------------------------->
-        <section class="arti-siderpage">
-            <div class="boxed-articles">
-
-                <div class="art">
-                    <!----------Article for the bird----------------->
-                    <div class="article">
-                        <img src="images/a1.jpg" alt="">
-                        <p>Discover Amazing places of the world with us</p>
-
-                    </div>
-
-
-                    <div class="article">
-                        <img src="images/a2.jpg" alt="">
-                        <p>Do you know what boat racing is? It's not a tale anymore with us. We make fantasies a reality.</p>
-
-                    </div>
-
-
-                </div>
-                <div class="art2" style="margin-top: 3%;">
-                    <div class="article">
-                        <img src="images/a3.jpg" alt="">
-                        <p>Enjoy travels with your loved ones, whether they are family, friends, or both. Have a good time together and make memories. Fun is what life is all about for us.</p>
-
-
-
-                    </div>
-                    <div class="article">
-                        <img src="images/a4.jpg" alt="">
-                        <p>One of the best refreshments you can have with us is water skating.</p>
-                    </div>
-                </div>
-
-            </div>
-
-
-
-
-            <!------------CALENDAR---------------------------------------------------------------->
-            <div class="calender-booking">
-
-
-
-                <div class="calender">
-
-                    <h4 style="color: #00e6b8;  text-align: center; font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;">MARCH 2023</h4>
-                    <table class="table" border="1" style="background-color: #3d3d5c; color: aliceblue;" cellpadding="3">
-
-                        <tr>
-                            <th>Sun</th>
-                            <th>Mon</th>
-                            <th>Tue</th>
-                            <th>Wed</th>
-                            <th>Thur</th>
-                            <th>Fri</th>
-                            <th>Sat</th>
-                        </tr>
-
-                        <tr>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                            <td>1</td>
-                            <td>2</td>
-                            <td>3</td>
-                            <td>4</td>
-                        </tr>
-                        <tr>
-                            <td>5</td>
-                            <td>6</td>
-                            <td style="background-color:  #1aff1a; width: 6px; height: 7px; border-radius: 50%;">7</td>
-                            <td>8</td>
-                            <td>9</td>
-                            <td>10</td>
-                            <td>11</td>
-                        </tr>
-
-                        <tr>
-                            <td>12</td>
-                            <td>13</td>
-                            <td>14</td>
-                            <td>15</td>
-                            <td>16</td>
-                            <td>17</td>
-                            <td>18</td>
-                        </tr>
-
-                        <tr>
-                            <td>19</td>
-                            <td>20</td>
-                            <td>21</td>
-                            <td>22</td>
-                            <td>23</td>
-                            <td>24</td>
-                            <td>25</td>
-                        </tr>
-                        <tr>
-                            <td>26</td>
-                            <td>27</td>
-                            <td>28</td>
-                            <td>29</td>
-                            <td>30</td>
-                            <td>31</td>
-                            <td></td>
-                        </tr>
-
-
-                    </table>
-
-                </div>
-
-
-
-
-                <!---------------------Bookings---------------------------------------------------------------------->
-                <div class="booking">
-
-                    <h4>Tours & Travel Services</h4>
-                    <div class="guide">
-                        <h2><i class="fa fa-road" aria-hidden="true"></i></h2>
-                        <div style="padding-left: 30px;">
-                            <h5>Tour Guide</h5>
-                            <a style="text-decoration: none;" href="#">Book Now</a>
-                        </div>
-
-
-                    </div>
-                    <div class="ticket">
-                        <h2><i class="fa fa-ticket" aria-hidden="true"></i></h2>
-                        <div style="padding-left: 30px;">
-                            <h5>Ticket Booking</h5>
-                            <a style="text-decoration: none;" href="#">Book Now</a>
-                        </div>
-
-                    </div>
-
-                    <div class="hotel">
-                        <h2><i class="fa fa-cutlery" aria-hidden="true"></i></h2>
-                        <div style="padding-left: 35px;">
-                            <h5>Hotel Booking</h5>
-                            <a style="text-decoration: none;" href="#">Book Now</a>
-                        </div>
-
-                    </div>
-
-                </div>
-
-            </div>
-        </section>
-
     </section>
+
+
+    <!--------------------ARTICLES-------------------------->
+    <section class="arti-siderpage">
+        <div class="boxed-articles">
+
+            <div class="art">
+                <!----------Article for the bird----------------->
+                <div class="article">
+                    <img src="images/a1.jpg" alt="">
+                    <p>Discover Amazing places of the world with us</p>
+
+                </div>
+
+
+                <div class="article">
+                    <img src="images/a2.jpg" alt="">
+
+                    <p>Do you know what boat racing is? It's not a tale anymore with us. We make fantasies a reality.</p>
+
+                </div>
+
+
+            </div>
+            <div class="art2" style="margin-top: 3%;">
+                <div class="article">
+                    <img src="images/a3.jpg" alt="">
+                    <p>Enjoy travels with your loved ones, whether they are family, friends, or both. Have a good time together and make memories. Fun is what life is all about for us.</p>
+
+
+
+                </div>
+                <div class="article">
+                    <img src="images/a4.jpg" alt="">
+                    <p>One of the best refreshments you can have with us is water skating.</p>
+                </div>
+            </div>
+
+        </div>
+
+
+
+
+        <!------------CALENDAR---------------------------------------------------------------->
+        <div class="calender-booking">
+
+
+
+            <div class="calender">
+
+                <h4 style="color: #00e6b8;  text-align: center; font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;">MARCH 2023</h4>
+                <table class="table" border="1" style="background-color: #3d3d5c; color: aliceblue;" cellpadding="3">
+
+                    <tr>
+                        <th>Sun</th>
+                        <th>Mon</th>
+                        <th>Tue</th>
+                        <th>Wed</th>
+                        <th>Thur</th>
+                        <th>Fri</th>
+                        <th>Sat</th>
+                    </tr>
+
+                    <tr>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td>1</td>
+                        <td>2</td>
+                        <td>3</td>
+                        <td>4</td>
+                    </tr>
+                    <tr>
+                        <td>5</td>
+                        <td>6</td>
+                        <td style="background-color:  #1aff1a; width: 6px; height: 7px; border-radius: 50%;">7</td>
+                        <td>8</td>
+                        <td>9</td>
+                        <td>10</td>
+                        <td>11</td>
+                    </tr>
+
+                    <tr>
+                        <td>12</td>
+                        <td>13</td>
+                        <td>14</td>
+                        <td>15</td>
+                        <td>16</td>
+                        <td>17</td>
+                        <td>18</td>
+                    </tr>
+
+                    <tr>
+                        <td>19</td>
+                        <td>20</td>
+                        <td>21</td>
+                        <td>22</td>
+                        <td>23</td>
+                        <td>24</td>
+                        <td>25</td>
+                    </tr>
+                    <tr>
+                        <td>26</td>
+                        <td>27</td>
+                        <td>28</td>
+                        <td>29</td>
+                        <td>30</td>
+                        <td>31</td>
+                        <td></td>
+                    </tr>
+
+
+                </table>
+
+            </div>
+
+
+
+
+            <!---------------------Bookings---------------------------------------------------------------------->
+            <div class="booking">
+
+                <h4>Tours & Travel Services</h4>
+                <div class="guide">
+                    <h2><i class="fa fa-road" aria-hidden="true"></i></h2>
+                    <div style="padding-left: 30px;">
+                        <h5>Tour Guide</h5>
+                        <a style="text-decoration: none;" href="#">Book Now</a>
+                    </div>
+
+
+                </div>
+                <div class="ticket">
+                    <h2><i class="fa fa-ticket" aria-hidden="true"></i></h2>
+                    <div style="padding-left: 30px;">
+                        <h5>Ticket Booking</h5>
+                        <a style="text-decoration: none;" href="#">Book Now</a>
+                    </div>
+
+                </div>
+
+                <div class="hotel">
+                    <h2><i class="fa fa-cutlery" aria-hidden="true"></i></h2>
+                    <div style="padding-left: 35px;">
+                        <h5>Hotel Booking</h5>
+                        <a style="text-decoration: none;" href="#">Book Now</a>
+                    </div>
+
+                </div>
+
+            </div>
+
+        </div>
+    </section>
+
+
     <!----------------------Packages------------------------------------>
     <section class="packages">
         <h3>Our Tour Packages</h3>
@@ -359,8 +362,76 @@
         </div>
 
     </section>
+    <!-----------------------------------------Most explored places---------------------------------------------------------->
+    <section class="most-explored">
+        <h4>Most Explored Places</h4>
+        <div class="explored1">
+            <div id="place1">
+                <img src="images/indonesia.jpg" alt="">
+                <div class="centered">
+                    <h5>Indonesia</h5>
+                </div>
 
 
+
+            </div>
+            <div id="place1">
+                <img src="images/rome.jpg" alt="">
+                <div class="centered">
+                    <h5>Rome</h5>
+                </div>
+
+            </div>
+            <div id="place1">
+                <img src="images/england.jpg" alt="">
+                <div class="centered">
+                    <h5>England</h5>
+                </div>
+
+            </div>
+            <div id="place1">
+                <img src="images/New-zealand.jpg" alt="">
+                <div class="centered">
+                    <h5>New Zealand</h5>
+                </div>
+
+            </div>
+
+        </div>
+        <div class="explored2">
+
+            <div id="place1">
+                <img src="images/kilimanjaro-tz.jpg" alt="">
+                <div class="centered">
+                    <h5>Tanzania</h5>
+                </div>
+
+            </div>
+            <div id="place1">
+                <img src="images/china-great-wall.jpg" alt="">
+                <div class="centered">
+                    <h5>Great Wall China</h5>
+                </div>
+
+            </div>
+            <div id="place1">
+                <img src="images/everest-nepal.jpg" alt="">
+                <div class="centered">
+                    <h5>Nepal</h5>
+                </div>
+
+            </div>
+            <div id="place1">
+                <img src="images/indianocean-kenya.jpg" alt="">
+                <div class="centered">
+                    <h5>Kenya</h5>
+                </div>
+
+            </div>
+
+        </div>
+
+    </section>
     <!----------------------footer------------------------------------->
     <section class="footer">
         <div id="container">
