--- a/information2.html
+++ b/information2.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Traveller-Information page</title>
     <link rel="shortcut icon" type="image/png" style="border-radius: 50%;" href="images/t.jpg">
+    <!-----------w3.links----------->
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 </head>
 
 <body style="background-color:  #bfbfbf; ">
@@ -70,6 +72,55 @@
         </div>
 
     </div>
+
+    <!--------------------Testmonials------------------------->
+    <section class="testmonials">
+        <h4>Testmonials</h4>
+        <h5>What our clients say!</h5>
+        <div id="all-testmonies" class="w3-container slide w3-center w3-animate-right">
+            <div id="first-testmony">
+                <img src="images/test-1.jpg" alt="">
+                <p>Traveller provides the best services imaginable! Its packages are the most appealing and cost-effective. Through you, I've seen the wonders of the world. Thank you very much.</p>
+                <h5>Jayden Miles</h5>
+                <span>Indonesia</span>
+                <h6>Rate Us:
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                </h6>
+            </div>
+            <div id="second-testmony">
+                <img src="images/test-2.jpg" alt="">
+                <p>Have you ever fantasized about having fun and visiting famous places? The Traveller bears the brunt of the blame. They got your back. I enjoy knowing them. Thank you very much.</p>
+                <h5>Isabella Oliver</h5>
+                <span>Thailand</span>
+                <h6>Rate Us:
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+
+                </h6>
+
+            </div>
+            <div id="third-testmony">
+                <img src="images/test-3.jpg" alt="">
+                <p>Finally, my dreams have come true. I was able to visit the famous places that I had always wanted to visit at a very low cost. I appreciated your assistance. I intend to return.</p>
+                <h5>Hudson Grayson</h5>
+                <span>Europe</span>
+                <h6>Rate Us:
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star-half" aria-hidden="true"></i>
+                </h6>
+            </div>
+        </div>
+
+    </section>
 
 
 
