changes made on the about page

--- a/about2.html
+++ b/about2.html
@@ -22,6 +22,18 @@
     <div id="back">
         <a href="index.html"><i class="fa fa-backward" aria-hidden="true"></i>Back</a>
     </div>
+    <!---------------------------------We are your partners--------start--------------------------------->
+
+    <section>
+        <div class="wepartner">
+            <img src="images/partner.jpg" alt="">
+            <pre>We are your partner.
+        We share your vision.
+    Make fantasies a reality.Go ahead!</pre>
+        </div>
+    </section>
+
+    <!---------------------------------We are your partners--------end--------------------------------->
     <div class="abt_img">
 
         <img src="images/about.jpg" alt="">
@@ -106,6 +118,11 @@
                     <h4>VISION</h4>
                     <p>To provide quality services to our esteemed customers across the world.</p>
                 </div>
+                <div class="purpose">
+                    <h4>OUR PURPOSE</h4>
+                    <p>To make it easy and bring your fantisies to reality .</p>
+                </div>
+
 
             </div>
             <div class="social-pages">
