--- a/information2.html
+++ b/information2.html
@@ -137,6 +137,11 @@
                     <h4>VISION</h4>
                     <p>To provide quality services to our esteemed customers across the world.</p>
                 </div>
+                <div class="purpose">
+                    <h4>OUR PURPOSE</h4>
+                    <p>To make it easy and bring your fantisies to reality .</p>
+                </div>
+
 
             </div>
             <div class="social-pages">
