--- a/index.html
+++ b/index.html
@@ -22,13 +22,18 @@
 </head>
 
 <body style="background-color: #bfbfbf;">
-
+    <!-------------------- start Background video-------------------->
+    <video autoplay loop muted plays-inline class="video">
+        <source src="videos/water.mp4" type="video/mp4">
+    
+        </video>
+    <!-------------------- end Background video---------------------->
     <header>
         <div class="topbar">
 
             <div class="website-name">
                 <img src="images/logo2.png" alt="">
-                <h3> <span style="color: brown;">Tra</span><span style="color: rgb(89, 9, 163);">vel</span><span style="color: rgb(47, 145, 28);">ler</span></h3>
+                <h3 id="title"> <span id="q">Tra</span><span id="w">vel</span><span id="e">ler</span></h3>
             </div>
             <ul>
 
