--- a/information2.html
+++ b/information2.html
@@ -13,7 +13,13 @@
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 </head>
 
-<body style="background-color:  #bfbfbf; ">
+<body style="background-color:  #4d4d4d; ">
+    <!-------------------- start Background video-------------------->
+    <video autoplay loop muted plays-inline class="video">
+        <source src="videos/.mp4" type="video/mp4">
+    
+        </video>
+    <!-------------------- end Background video---------------------->
     <div id="back">
         <a href="index.html"><i class="fa fa-backward" aria-hidden="true"></i>Back</a>
     </div>
