--- a/contact2.html
+++ b/contact2.html
@@ -10,10 +10,18 @@
     <link rel="shortcut icon" type="image/png" style="border-radius: 50%;" href="images/t.jpg">
     <title>Traveller-Contact Us</title>
     <script type="text/javascript" src="main.js"></script>
+    <style>
+        body {
+            background-image: url('images/05-small.jpg');
+            background-repeat: no-repeat;
+            background-size: cover;
+            background-position: bottom;
+        }
+    </style>
 
 </head>
 
-<body style="background-color:  #808080;">
+<body style="background-color:  #948e8e;">
     <div id="back">
         <a href="index.html"><i class="fa fa-backward" aria-hidden="true"></i>Back</a>
     </div>
