--- a/information2.html
+++ b/information2.html
@@ -128,6 +128,50 @@
 
     </section>
 
+    <!-------------------Services to enjoy with us---------------------------->
+    <section class="services-to">
+        <h2>Services you have to enjoy with us</h2>
+        <div id="top-services">
+            <div id="hotels">
+                <img src="images/sunset-pool.jpg" alt="">
+                <h3>Affordable Hotels</h3>
+                <p>Dine in our classic hotels</p>
+
+            </div>
+            <div id="travel">
+                <img src="images/travel.jpg" alt="">
+                <h3>Fastest Travel</h3>
+                <p>We value your time. Arrive to your destination in a minute</p>
+
+            </div>
+            <div id="food-drinks">
+                <img src="images/foods-drinks.jpg" alt="">
+                <h3>Best Foods and Drinks</h3>
+                <p>Enjoy our delicious meals </p>
+            </div>
+
+        </div>
+        <div id="bottom-services">
+            <div id="adventures">
+                <img src="images/adventure2.jpd.jpg" alt="">
+                <h3>New Adventures</h3>
+                <p>Meet new Aventures with us</p>
+            </div>
+            <div id="safety">
+                <img src="images/safety2.jpg" alt="">
+                <h3>Safety Guide</h3>
+                <p>Your safety is guaranteed with us</p>
+            </div>
+            <div id="rewards">
+                <img src="images/rewards.jpg" alt="">
+                <h3>Big Rewards</h3>
+                <p>We have a lot of rewards to our clients</p>
+            </div>
+
+        </div>
+
+    </section>
+
 
 
 
