--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
             <div class="website-name">
                 <img src="images/logo2.png" alt="">
-                <h3 id="title"> <span id="q">Tra</span><span id="w">vel</span><span id="e">ler</span></h3>
+                <h3 id="title"><i class="fa fa-plane" aria-hidden="true"></i> <span id="q">Tra</span><span id="w">vel</span><span id="e">ler</span></h3>
             </div>
             <ul>
 
