--- a/information2.html
+++ b/information2.html
@@ -196,10 +196,10 @@
             </div>
             <div class="social-pages">
                 <h5>Visit Us Through The Following Pages</h5>
-                <a href="#"><i class="fa fa-facebook-square" aria-hidden="true"></i>  Facebook</a>
-                <a href="#"><i class="fa fa-instagram" aria-hidden="true"></i>  Instagram</a>
-                <a href="#"><i class="fa fa-twitter" aria-hidden="true"></i>  Twitter</a>
-                <a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i>  LinkedIn</a>
+                <a href="https://www.facebook.com"><i class="fa fa-facebook-square" aria-hidden="true"></i>  Facebook</a>
+                <a href="https://www.instagram.com"><i class="fa fa-instagram" aria-hidden="true"></i>  Instagram</a>
+                <a href="https://www.twitter.com"><i class="fa fa-twitter" aria-hidden="true"></i>  Twitter</a>
+                <a href="https://www.linkedin.com"><i class="fa fa-linkedin" aria-hidden="true"></i>  LinkedIn</a>
 
             </div>
 
